--- a/as_safeguard/assets/css/style-starter.css
+++ b/as_safeguard/assets/css/style-starter.css
@@ -2280,7 +2280,6 @@ input[type="button"].btn-block {
 .dropdown-menu {
   position: absolute;
   top: 93%;
-  left: -16%;
   z-index: 1000;
   display: none;
   float: left;
@@ -10416,6 +10415,7 @@ nav ul li a:hover {
   min-width: 20rem;
   padding: 1rem 0; 
   background-color: #262222 !important;
+  left: -5vw;
   color: #fff !important;}
 
 .show ul li {
